Part 3 - All test cases passed + 100% statement coverage